2007-05-08  Hans Boehm <Hans.Boehm@hp.com>

	* Makefile.am: Dont distribute copied atomic_ops files.  Include
	libatomic_ops with "make dist".
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* configure.ac: Enable THREAD_LOCAL_ALLOC for Cygwin with threads.
	* win32_threads.c: Report error for Cygwin + GC_DLL.

2007-05-08  Hans Boehm <Hans.Boehm@hp.com>

	* Makefile.direct: Update THREAD_LOCAL_ALLOC documentation.
	* cord/de_win.c: Rename and move AboutBox.  Call GC_INIT.  Remove
	MakeProcInstance anachronism.
	* doc/README.macros: Officially remove elif prohibition.
	Remove documentation for defunct SRC_M3 support.
	* include/gc.h: Remove more SRC_M3 references.
	* include/private/gcconfig.h: Remove still more SRC_M3 references.
	GC_SOLARIS_THREADS no longer needs to be checked separately.
	
2007-05-08  Hans Boehm <Hans.Boehm@hp.com>

	* thread_local_alloc.c, include/private/thread_local_alloc.h:
	Spell __declspec correctly.
	* NT_STATIC_THREADS_MAKEFILE: Enable thread-local allocation.

2007-05-07  Hans Boehm <Hans.Boehm@hp.com>

	* doc/README.win32: Adjust GC_win32_dll_threads rules again.

2007-05-07  Hans Boehm <Hans.Boehm@hp.com>

	* mark.c (GC_mark_some wrapper): Restructure for readability, handle
	GC_started_thread_while_stopped.
	* misc.c (Win32 GC_write): Lock GC_write_cs only if needed.
	* win32_threads.c: (client_has_run): remove,
	GC_started_thread_while_stopped, GC_attached_thread: add.
	(GC_push_all_stacks): Add verbose output.
	(DllMain): Avoid initializing collector or the like.
	Never update both thread tables.
	* doc/README.win32: Adjust GC_win32_dll_threads rules.

2007-05-07  Hans Boehm <Hans.Boehm@hp.com>

	* pthread_stop_world.c (GC_push_all_stacks): Print thread count with
	GC_PRINT_VERBOSE_STATS.

2007-05-01  Hans Boehm <Hans.Boehm@hp.com>
		(and Manuel Serrano, Craig McDaniel)

	* configure.ac: Comment out redundant
	  AC_DEFINE(NO_EXECUTE_PERMISSION).
	* configure: Regenerate.
	* sparc_mach_dep.S: Remove single quote in comment.